--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,8 @@ dependencies:
   path_provider: ^1.6.24
   qr_flutter: ^3.2.0
   barcode_scan: ^2.0.1
-  loader_search_bar: ^1.0.3+3
   random_color: ^1.0.5
   google_fonts: ^1.1.0
-  dio: ^3.0.10
   font_awesome_flutter: ^8.10.0
   shared_preferences: ^0.5.12+4
   flutter_spinkit: "^4.1.2"
@@ -48,6 +46,10 @@ dependencies:
   http: ^0.12.2
   provider: ^4.3.2+2
   date_format: ^1.0.9
+  fluttertoast: ^7.1.5
+  url_launcher: ^5.7.10
+  flutter_sparkline: ^0.1.0
+  flutter_staggered_grid_view: ^0.3.2
 
 
 dev_dependencies:
