--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,25 +31,18 @@ dependencies:
   firebase_core: ^0.5.1
   firebase_auth: ^0.18.2
   cloud_firestore: ^0.14.2
-  firebase_database: ^4.2.0
-  path_provider: ^1.6.24
   qr_flutter: ^3.2.0
   barcode_scan: ^2.0.1
-  random_color: ^1.0.5
   google_fonts: ^1.1.0
-  font_awesome_flutter: ^8.10.0
   shared_preferences: ^0.5.12+4
-  flutter_spinkit: "^4.1.2"
   flutter_cache_manager: ^2.0.0
-  flutter_colorpicker: ^0.3.4
-  firebase_storage: ^5.0.1
   http: ^0.12.2
   provider: ^4.3.2+2
   date_format: ^1.0.9
   fluttertoast: ^7.1.5
   url_launcher: ^5.7.10
-  flutter_sparkline: ^0.1.0
   flutter_staggered_grid_view: ^0.3.2
+
 
 
 dev_dependencies:
@@ -74,7 +67,7 @@ flutter:
   assets:
     - assets/images/strengthsicon.jpg
     - assets/images/cardiosicon.jpg
-    - assets/images/glogo.png
+    - assets/images/logo_transparent.png
  
     
 
