--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/images/strengthsicon.jpg
     - assets/images/cardiosicon.jpg
     - assets/images/logo_transparent.png
+    - assets/images/default.png
  
     
 
